--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "php": ">=5.3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.1.*",
+    "phpunit/phpunit": "~4.5",
     "mikey179/vfsStream": "1.6.*"
   },
   "autoload": {
